feat: refactor image schema
